Wishlist (formerly TODO):

* Implement the new scheme of handling classwt in classification.

* Allow categorical predictors with more than 32 categories.

* Use more compact storage of proximity matrix.

* Allow case weights by using the weights in sampling?

========================================================================
Change in 4.5-28:

* randomForest() would segfault if there are 32-level factors among the
  predictor variables.

Changes in 4.5-27:

* Fixed handling of ordered factors in predict.randomForest().

Changes in 4.5-26:

* Fix formula parsing so use of functions in formula won't trigger errors.

* predict.randomForest() did not work when given a matrix without column
  names as the newdata.

Changes in 4.5-25:

* In regression, the out-of-bag estimate of MSE and R-squared for the
  first few trees (for which not all observations have been OOB yet),
  were computed wrong, leading to gross over-estimates of MSEs for the
  first few trees.  This did not affect the final MSE and R-squared
  for the whole forest; i.e., the first few elements of the `mse'
  component (and thus the corresponding elements in `rsq') in the
  randomForest object are wrong, but others are correct.

  (Thanks to Ulrike Gromping for pointing out this problem, as well
   as the one fixed in 4.5-24.)

Changes in 4.5-24:

* randomForest.formula() did not exclude terms preceded by -.

Changes in 4.5-23:

* Fixed tuneRF() to work with R version > 2.6.1.

* Make predict.randomForest() more backward compatible with randomForest
  objects created from versions older than 4.5-21.

Changes in 4.5-22:

* Allow unsupervised randomForest not to produce a proximity matrix (by
  specifying proximity=FALSE), suggested by Nick Crookston.

Changes in 4.5-21:

* The added check for factor level consistency in predictor variables in
  4.5-20 was not working for predictors given in a matrix (reported by
  Ramon Diaz-Uriate).

Changes in 4.5-20:
