@@ -1,7 +1,7 @@
 Package: randomForest
 Title: Breiman and Cutler's random forests for classification and regression
-Version: 4.5-28
-Date: 2008-10-16
+Version: 4.5-30
+Date: 2009-02-26
 Depends: R (>= 2.0.0), stats
 Suggests: RColorBrewer
 Author: Fortran original by Leo Breiman and Adele Cutler, R port by Andy Liaw and Matthew Wiener.
@@ -9,4 +9,4 @@ Description: Classification and regression based on a forest of trees using rand
 Maintainer: Andy Liaw <andy_liaw@merck.com>
 License: GPL version 2 or later
 URL: http://stat-www.berkeley.edu/users/breiman/RandomForests
-Packaged: Thu Oct 16 14:24:20 2008; Liawand
+Packaged: Thu Feb 26 15:44:50 2009; liawand
