@@ -12,17 +12,17 @@ varUsed(x, by.tree=FALSE, count=TRUE)
   \item{by.tree}{Should the list of variables used be broken down by
     trees in the forest?}
   \item{count}{Should the frequencies that variables appear in trees be
-    returned?} 
+    returned?}
 }
 \value{
-  If \code{count=TRUE} and {by.tree=FALSE}, a integer vector containing
+  If \code{count=TRUE} and \code{by.tree=FALSE}, a integer vector containing
   frequencies that variables are used in the forest.  If
   \code{by.tree=TRUE}, a matrix is returned, breaking down the counts by
   tree (each column corresponding to one tree and each row to a variable).
 
   If \code{count=FALSE} and \code{by.tree=TRUE}, a list of integer
   indices is returned giving the variables used in the trees, else if
-  \code{by.tree=FALSE}, a vector of integer indices giving the 
+  \code{by.tree=FALSE}, a vector of integer indices giving the
   variables used in the entire forest.
 }
 \seealso{
